--- a/index.html
+++ b/index.html
@@ -234,6 +234,8 @@
 	<script src="Extensions/TextObject/textruntimeobject.js" crossorigin="anonymous"></script>
 	<script src="Extensions/TiledSpriteObject/tiledspriteruntimeobject-pixi-renderer.js" crossorigin="anonymous"></script>
 	<script src="Extensions/TiledSpriteObject/tiledspriteruntimeobject.js" crossorigin="anonymous"></script>
+	<script src="Extensions/TweenBehavior/TweenManager.js" crossorigin="anonymous"></script>
+	<script src="Extensions/TweenBehavior/tweenruntimebehavior.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Video/videoruntimeobject-pixi-renderer.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Video/videoruntimeobject.js" crossorigin="anonymous"></script>
 	<script src="object-capabilities/AnimatableBehavior.js" crossorigin="anonymous"></script>
